Fix z-index mistake

--- a/lechaudron-app/src/app/contact/contact.component.css
+++ b/lechaudron-app/src/app/contact/contact.component.css
@@ -6,7 +6,6 @@
 
 .main {
   position: sticky;
-  z-index: 5;
   margin-top: 290px;
   margin-bottom: 180px;
 }
