--- a/lechaudron-app/src/app/legal-disclosure/legal-disclosure.component.css
+++ b/lechaudron-app/src/app/legal-disclosure/legal-disclosure.component.css
@@ -6,7 +6,6 @@
 
 .main {
   position: sticky;
-  z-index: 5;
   margin-top: 300px;
   margin-bottom: 120px;
   padding-left: 10%;
